--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,41 @@
-*.dump
 *.pyc
+.idea
+
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Logs and databases #
+######################
+*.log
 *.sql
-*.wpr
-.ropeproject
-coverage/
-db.sqlite
-debugger.log
-docs/build/
-docs/source/api/
-fab_settings.py
-local_settings.py
-locale
-submodules/
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Unit test / coverage reports
+##############################
+.coverage
+htmlcov/
+.tox
+nosetests.xml
+
+#Settings files
+######################
+settings.py
+custom_settings.py
+custom_wsgi.py
+fabric_settings.py
